# canokey-core

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FIDO2 Conformance Testing.json  LICENSE  README.md  go.mod  go.sum  llvm-gcov.sh  pcscd-reader.conf
.github/workflows/: tests.yml  usbip.yml
admin/: admin.c
applets/admin/: admin.c
applets/ctap/: cose-key.h  ctap-errors.h  ctap-internal.h  ctap-parser.c  ctap-parser.h  ctap.c  fido-internal.h  pin.c  pin.h  secret.c  secret.h  u2f.c  u2f.h
applets/meta/: meta.c
applets/ndef/: ndef.c
applets/oath/: oath.c
applets/openpgp/: key.c  key.h  openpgp.c
applets/pass/: pass.c
applets/piv/: piv.c
cmake/Modules/: AddCMockaTest.cmake  AddMockedTest.cmake
ctap/: ctap-parser.c  ctap.c  fido-internal.h  secret.c  secret.h  u2f.c
fido2/: cose-key.h  ctap-errors.h  ctap-parser.c  ctap-parser.h  ctap.c  secret.c  secret.h  u2f.c
fuzzer/: dummy.c  honggfuzz-debug.c  honggfuzz-fuzzer.c  run-fuzzer.sh
fuzzing/: .gitignore  gen_seed_data.sh
fuzzing/applet0/data/: piv.10.txt  piv.104.txt  piv.105.txt  piv.108.txt  piv.109.txt  piv.11.txt  piv.110.txt  piv.114.txt  piv.115.txt  piv.126.txt  piv.127.txt  piv.128.txt  piv.130.txt  piv.131.txt  piv.142.txt  piv.146.txt  piv.147.txt  piv.148.txt  piv.15.txt  piv.151.txt  piv.156.txt  piv.157.txt  piv.158.txt  piv.159.txt  piv.16.txt  piv.160.txt  piv.161.txt  piv.162.txt  piv.163.txt  piv.164.txt  piv.165.txt  piv.166.txt  piv.167.txt  piv.168.txt  piv.169.txt  piv.17.txt  piv.170.txt  piv.171.txt  piv.172.txt  piv.173.txt  (+98 more)
fuzzing/applet1/data/: fido.103.txt  fido.106.txt  fido.109.txt  fido.11.txt  fido.112.txt  fido.113.txt  fido.116.txt  fido.117.txt  fido.12.txt  fido.120.txt  fido.123.txt  fido.124.txt  fido.126.txt  fido.13.txt  fido.130.txt  fido.132.txt  fido.133.txt  fido.14.txt  fido.141.txt  fido.146.txt  fido.149.txt  fido.150.txt  fido.153.txt  fido.154.txt  fido.157.txt  fido.158.txt  fido.161.txt  fido.162.txt  fido.165.txt  fido.166.txt  fido.169.txt  fido.17.txt  fido.170.txt  fido.173.txt  fido.174.txt  fido.177.txt  fido.178.txt  fido.181.txt  fido.182.txt  fido.185.txt  (+204 more)
fuzzing/applet2/data/: oath.100.txt  oath.1002.txt  oath.1009.txt  oath.101.txt  oath.102.txt  oath.1022.txt  oath.1026.txt  oath.103.txt  oath.1033.txt  oath.1036.txt  oath.104.txt  oath.1041.txt  oath.1043.txt  oath.105.txt  oath.1053.txt  oath.1057.txt  oath.106.txt  oath.1065.txt  oath.107.txt  oath.1073.txt  oath.1079.txt  oath.108.txt  oath.1080.txt  oath.1089.txt  oath.109.txt  oath.1094.txt  oath.1097.txt  oath.1099.txt  oath.110.txt  oath.1104.txt  oath.1105.txt  oath.1106.txt  oath.1107.txt  oath.1108.txt  oath.1109.txt  oath.111.txt  oath.1110.txt  oath.1111.txt  oath.1112.txt  oath.1113.txt  (+579 more)
fuzzing/applet3/data/: admin.19.txt  admin.2.txt  admin.26.txt  admin.27.txt  admin.33.txt  admin.35.txt  admin.36.txt  admin.38.txt  admin.40.txt  admin.41.txt  admin.42.txt  admin.46.txt  admin.62.txt  admin.63.txt
fuzzing/applet4/data/: gpg.10.txt  gpg.100.txt  gpg.101.txt  gpg.102.txt  gpg.103.txt  gpg.104.txt  gpg.105.txt  gpg.107.txt  gpg.110.txt  gpg.113.txt  gpg.114.txt  gpg.115.txt  gpg.119.txt  gpg.12.txt  gpg.120.txt  gpg.122.txt  gpg.13.txt  gpg.133.txt  gpg.134.txt  gpg.137.txt  gpg.142.txt  gpg.144.txt  gpg.147.txt  gpg.149.txt  gpg.15.txt  gpg.150.txt  gpg.156.txt  gpg.17.txt  gpg.18.txt  gpg.189.txt  gpg.19.txt  gpg.190.txt  gpg.191.txt  gpg.2.txt  gpg.200.txt  gpg.201.txt  gpg.202.txt  gpg.211.txt  gpg.212.txt  gpg.22.txt  (+97 more)
include/: admin.h  apdu.h  applets.h  common.h  core.h  ctap.h  device-config-default.h  device.h  fido2.h  fs.h  key.h  meta.h  ndef.h  nfc.h  oath.h  openpgp.h  pass.h  pin.h  piv.h  tusb_config.h  u2f.h  util.h
interfaces/NFC/: fm.c  nfc.c
interfaces/USB/class/ccid/: ccid.c  ccid.h  ccid_device.c  ccid_device.h  tusb_ccid.h  usbd_ccid.c  usbd_ccid.h
interfaces/USB/class/ctaphid/: ctaphid.c  ctaphid.h  usbd_ctaphid.c  usbd_ctaphid.h
interfaces/USB/class/hid/: hid.c  hid.h
interfaces/USB/class/kbdhid/: kbdhid.c  kbdhid.h  usbd_kbdhid.c  usbd_kbdhid.h
interfaces/USB/class/webusb/: webusb.c  webusb.h
interfaces/USB/core/inc/: usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
interfaces/USB/core/src/: usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
interfaces/USB/device/: usb_descriptors.c  usb_descriptors.h  usb_device.c  usb_device.h  usbd_canokey.c  usbd_canokey.h  usbd_conf.h  usbd_desc.c  usbd_desc.h
oath/: oath.c
openpgp/: key.c  key.h  openpgp.c  openpgp.h
piv/: key.c  key.h  piv.c
src/: apdu.c  applets.c  common.c  core.c  device.c  fs.c  key.c  pin.c  util.c
test/: CMakeLists.txt  test_apdu.c  test_fido2.c  test_key.c  test_oath.c  test_openpgp.c  test_piv.c  test_u2f.c
test-real/: .gitignore  admin-reset.sh  libccid_Info.plist  pinentry-mock  test-gpg.sh  test-libfido2.sh  test-pass.sh  test-piv.sh  test.sh
test-via-pcsc/: Dockerfile  PIV_EXT_AUTH_KEY.txt  admin_test.go  build_fido_tests.sh  build_gpg.sh  fido2_SM2_COSE_key.patch  long-cert.pem  ndef_test.go  oath_test.go  openpgp_test.go  pcscd-reader.conf  pinentry-mock.patch  piv_test.go
u2f/: u2f.c  u2f.h
virt-card/: apdu-adapter.c  apdu-adapter.h  canokey-qemu.h  canokey-qemu.pc.in  ctap-hid.c  ctap-hid.h  device-sim.c  device-sim.h  disable-short-apdu-test.patch  dummy.c  example-pcscd-readers.conf  fabrication.c  fabrication.h  ffs.c  ffs.scheme  fido-hid-over-udp.c  git-rev.h.in  ifdhandler.c  qemu.c  test-oath.go  udp-server.c  usb-dummy.c  usb-dummy.h  usbip.c
